--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 # Logging #ÅèÄ¹ ¼­¹öÆ÷Æ® ¼³Á¤
 server.port = 8080
+
+spring.resources.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/static/
+spring.resources.add-mappings=true
