[front] 1. 메인로고 변경 2. 메뉴바 회원버튼 수정 및 정렬 3. 사진 리로드 오류 수정(여전히 오류)

--- a/build.gradle
+++ b/build.gradle
@@ -57,5 +57,8 @@ dependencies {  // 프로젝트에 추가될 의존성을 설정
     //oauth2 : 소셜로그인
     compile('org.springframework.boot:spring-boot-starter-oauth2-client')
 
+    //파일 의존관계 설정
+    compile('org.springframework.boot:spring-boot-devtools')
+
 }
 
